--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "leaflet-feature-legend": "^1.0.0",
     "leaflet-geosearch": "^3.6.0",
     "leaflet.fullscreen": "^2.1.0",
+    "leaflet.zoomhome": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
