--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
     "bootstrap": "^5.1.3",
     "leaflet": "^1.7.1",
     "leaflet-feature-legend": "^1.0.0",
+    "leaflet-geometryutil": "^0.10.0",
     "leaflet-geosearch": "^3.6.0",
+    "leaflet-mouse-position": "^1.2.0",
+    "leaflet-navbar": "^1.0.0",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet.fullscreen": "^2.1.0",
     "leaflet.zoomhome": "^1.0.0",
     "react": "^17.0.2",
